--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="easy tool for choosing colors for your website"
     />
+    <meta name="author" content="Paweł Kusznieruk" />
+    <meta name="keywords" content="colors choose get colors" />
     <title>Get colored | Home</title>
 
     <style type="text/css">
